k8s/my-nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mynginx-pod
  labels:
    component: web
    name: my-app

spec:
  containers:
    - name: mynginx
      image: linras/mynginx:k8s
      ports:
        - containerPort: 80
