k8s/my-redis-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-redis-pod
  labels:
    component: cache

spec:
  containers:
    - name: my-redis
      image: redis:alpine
      ports:
        - containerPort: 6379
