k8s/my-backend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackend-clusterip
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000

  selector:
    component: backend
