k8s/my-nginx-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: mynginx-clusterip
spec:
  type: ClusterIP
  selector:
    app: my-app
    component: web
  ports:
  - port: 80
    targetPort: 80
