k8s/my-nginx-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-pod-port

spec:
  type: NodePort
  ports: 
    - port: 80
      targetPort: 80
      nodePort: 31000
  selector:
    component: web
    name: my-app
